1999-10-14  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* oct-time.cc: Include <climits>.

1999-10-13  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* cmd-edit.h (command_editor::do_resize_terminal): New function.
	* cmd-edit.cc (command_editor::resize_terminal): New function.
	(gnu_readline::do_resize_terminal): New function.

Fri Sep  3 12:39:17 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* lo-mappers.cc: Include ieeefp.h and sunmath.h if we have them.
	* lo-ieee.c: Likewise.
	Delete extern "C" declarations for infinity and quiet_nan.

Fri Aug 20 07:58:00 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* mx-inlines.cc (VS_OP, SV_OP, VV_OP): Delete `extern template' decls.
	(VS_OP_FCN, SV_OP_FCN, VV_OP_FCN): Declare template functions
	`inline', not `static inline'.

	* idx-vector.cc (intcmp): Declare args as const void *, not int *,
	then cast to const int * to compare.

Fri Jul 16 11:23:51 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* DAEFunc.h: Remove useless preprocessor conditional.

Thu Jul 15 14:10:33 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* cmd-edit.cc (command_editor::do_decode_prompt_string):
	Use octave_time object instead of time_t.

	* file-stat.h (file_stat::fs_atime, file_stat::fs_mtime,
	file_stat::fs_ctime): Now octave_time objects.
	(file_stat::atime, file_stat::mtime, file_stat::ctime):
	Return octave_time objects.
	(file_stat::is_newer): Args are now octave_time objects instead of
	time_t.

	* oct-time.h (octave_time::as_double): Delete.
	(octave_time::operator double ()): New function.
	(octave_time::operator time_t ()): New function.
	(octave_time::ctime): New function.
	(octave_base_tm::strftime): Renamed from format_as_string.
	(octave_base_tm::asctime): New function.
	(operator == (const octave_time&, const octave_time&),
	operator != (const octave_time&, const octave_time&),
	operator < (const octave_time&, const octave_time&),
	operator <= (const octave_time&, const octave_time&),